<resources>
    <string name="app_name">Sprint Modulo 6</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="solo_efectivo">Solo efectivo</string>
    <string name="acepta_credito">Acepta crédito</string>
    <string name="error_el_smartphone_no_existe">Error: El smartphone no existe</string>
    <string name="hola">Hola</string>
    <string name="_500">500</string>
    <string name="_120">120</string>
    <string name="descripci_n">descripción</string>
    <string name="credito">credito</string>
    <string name="antes">Antes:</string>
    <string name="smartphones">Smartphones</string>
    <string name="anonymous">Anonymous</string>
    <string name="price">Price</string>
    <string name="mailto">mailto:</string>
    <string name="info_novaera_cl">info@novaera.cl</string>
    <string name="enviar_correo">Enviar correo</string>
    <string name="smartphone_detail">TODO</string>
    <string name="credit">TODO</string>
</resources>