<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clSmartphoneDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/divider_color"
    tools:context=".view.fragments.SmartphoneDetailFragment">

    <ScrollView
        android:id="@+id/svSmartphoneDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/hello_blank_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/llSmartphoneDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivSmartphoneDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:foregroundGravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_launcher_foreground" />

            <TextView
                android:id="@+id/tvSmartphoneDetailName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/hola"
                android:textColor="@color/primary_text"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivSmartphoneDetail"
                tools:text="Teléfono ejemplo modelo moderno" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvSmartphoneDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/text_icons"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSmartphoneDetailName">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clCvSmartphoneDetail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvBefore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/antes"
                        android:textColor="@color/secondary_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvSmartphoneDetailLastPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="8dp"
                        android:gravity="start"
                        android:text="@string/_500"
                        android:textColor="@color/secondary_text"
                        android:textSize="14sp"
                        app:layout_constraintStart_toEndOf="@+id/tvBefore"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="$500.000" />

                    <TextView
                        android:id="@+id/tvSmartphoneDetailPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:gravity="start"
                        android:text="@string/_120"
                        android:textColor="@color/primary_text"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:typeface="sans"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvSmartphoneDetailLastPrice"
                        tools:text="$350.000" />

                    <TextView
                        android:id="@+id/tvSmartphoneDetailDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:gravity="start"
                        android:text="@string/descripci_n"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvSmartphoneDetailPrice"
                        tools:text="Descripción y características del producto" />

                    <TextView
                        android:id="@+id/tvSmartphoneDetailCredit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:gravity="start"
                        android:text="@string/credito"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvSmartphoneDetailDescription"
                        tools:text="Solo efectivo" />

                    <ImageView
                        android:id="@+id/ivCashCredit"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_marginEnd="120dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/ic_launcher_foreground"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tvSmartphoneDetailCredit" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"

        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:foreground="@drawable/baseline_mail_outline_24"
        app:backgroundTint="@color/accent_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>